# simple_agent

./: .gitignore  README.md
python/: README.md
python/api/: README.md  pyproject.toml
python/api/src/api/: base_agent.py  base_message.py  base_state.py  galileo_streamlit_app.py
python/langgraph/1_simple_agent/: .env.example  README.md  agent.py  app.py  graph.ipynb  pyproject.toml  tools.py
python/langgraph/2_agent_with_rag/: README.md  pyproject.toml
python/langgraph/2_agent_with_rag/scripts/: setup_pinecone.py
python/langgraph/2_agent_with_rag/src/2_agent_with_rag/: .env.example  agent.py  app.py
python/langgraph/3_multi_agent/: pyproject.toml
python/langgraph/3_multi_agent/source-docs/supply-chain/: supply_chain.md
python/langgraph/3_multi_agent/src/3_multi_agent/: app.py  compound_agent.py  nodes.py
python/langgraph/3_multi_agent/src/3_multi_agent/financial_agent/: financial_agent.py  financial_agent_tools.py
python/langgraph/3_multi_agent/src/3_multi_agent/planner_agent/: planner_agent.py
python/langgraph/3_multi_agent/src/3_multi_agent/response_synthesis_agent/: response_synthesis_agent.py
python/langgraph/3_multi_agent/src/3_multi_agent/supply_chain_agent/: agent.py  pinecone_retrieval_tool.py
python/langgraph/3_multi_agent/src/3_multi_agent/translation_agent/: translation_agent.py
python/langgraph/common/: README.md  pyproject.toml
python/langgraph/common/src/common/: utils.py
python/langgraph/planners/rewoo/: pyproject.toml
python/langgraph/planners/rewoo/src/rewoo/: __init__.py  llama_finetuning_for_binary_classification.ipynb  rewoo_planner.py
python/wip/crewai_intro/: pyproject.toml
python/wip/crewai_intro/src/crewai_intro/: __init__.py
python/wip/crewai_intro/src/crewai_intro/latest_ai_development/: pyproject.toml  report.md
python/wip/crewai_intro/src/crewai_intro/latest_ai_development/src/latest_ai_development/: crew.py  main.py
python/wip/demo_agent/: .env.example  README.md  pyproject.toml
python/wip/demo_agent/src/demo_agent/: __init__.py  app.py  financial_agent.py  financial_agent_tools.py  graph.ipynb  orchestrator.py  rag_tool.py  shared_state.py  supply_chain_agent.py  tools.py  translators.py
