[project]
name = "3-multi-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Siddharth Gupta", email = "sid2harthgupta@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
3-multi-agent = "3_multi_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
