[project]
name = "3-multi-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Siddharth Gupta", email = "sid2harthgupta@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "api",
    "common",
    "dotenv>=0.9.9",
    "galileo>=1.3.0",
    "langchain-openai>=0.3.23",
    "langchain-pinecone>=0.2.8",
    "langchain-tavily>=0.2.2",
    "langgraph>=0.4.8",
]

[project.scripts]
3-multi-agent = "3_multi_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
api = { path = "../../api", editable = true }
common = { path = "../common", editable = true }
