[project]
name = "common"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Siddharth Gupta", email = "sid2harthgupta@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "api",
    "langchain-core>=0.3.65",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
api = { path = "../../api", editable = true }
